<resources>
    <string name="app_name">微校园</string>
    <string name="title_home">课程表</string>
    <string name="title_gadget">小工具</string>
    <string name="title_message">信息</string>


    <string name="str_day1">周一</string>
    <string name="str_day2">周二</string>
    <string name="str_day3">周三</string>
    <string name="str_day4">周四</string>
    <string name="str_day5">周五</string>
    <string name="str_day6">周六</string>
    <string name="str_day7">周日</string>

    <string name="str_section1">1</string>
    <string name="str_section2">2</string>
    <string name="str_section3">3</string>
    <string name="str_section4">4</string>
    <string name="str_section5">5</string>
    <string name="str_section6">6</string>
    <string name="str_section7">7</string>
    <string name="str_section8">8</string>
    <string name="str_section9">9</string>
    <string name="str_section10">10</string>
    <string name="str_section11">11</string>
    <string name="str_section12">12</string>

    <string-array name="array_week">
        <item>第 一 周</item>
        <item>第 二 周</item>
        <item>第 三 周</item>
        <item>第 四 周</item>
        <item>第 五 周</item>
        <item>第 六 周</item>
        <item>第 七 周</item>
        <item>第 八 周</item>
        <item>第 九 周</item>
        <item>第 十 周</item>
        <item>第十一周</item>
        <item>第十二周</item>
        <item>第十三周</item>
        <item>第十四周</item>
        <item>第十五周</item>
        <item>第十六周</item>
        <item>第十七周</item>
        <item>第十八周</item>
        <item>第十九周</item>
        <item>第二十周</item>
    </string-array>

    <string-array name="array_semester">
        <item>请选择带查询成绩的学期</item>
        <item>2016–2017 学年 第 一 学期</item>
        <item>2016–2017 学年 第 二 学期</item>
        <item>2018–2019 学年 第 一 学期</item>
        <item>2018–2019 学年 第 二 学期</item>
        <item>2020–2021 学年 第 一 学期</item>
        <item>2020–2021 学年 第 二 学期</item>
    </string-array>

    <string name="week_tip">请选择课程周</string>

</resources>