<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/schedule_background"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/schedule_spinner_height"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/schedule_spinner_height"
            android:layout_marginHorizontal="3dp"
            android:gravity="center"
            android:text="正在查看"
            android:textSize="@dimen/schedule_spinner_size"/>

        <Spinner
            android:id="@+id/schedule_option"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/schedule_spinner_height"
            android:textAlignment="center"
            android:background="@null"
            android:entries="@array/array_week"
            android:spinnerMode="dialog"
            android:prompt="@string/week_tip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/schedule_spinner_height"
            android:layout_marginHorizontal="3dp"
            android:gravity="center"
            android:text="的课程安排"
            android:textSize="@dimen/schedule_spinner_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/schedule_section_width"
        android:background="@color/schedule_day"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/schedule_tip1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/schedule_day_height"
            android:layout_marginHorizontal="1dp"
            android:padding="1dp"
            android:gravity="center"
            android:textSize="@dimen/schedule_day_size"
            android:background="@color/schedule_day"
            android:text="@string/str_day1"/>

        <TextView
            android:id="@+id/schedule_tip2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/schedule_day_height"
            android:layout_marginHorizontal="1dp"
            android:padding="1dp"
            android:gravity="center"
            android:textSize="@dimen/schedule_day_size"
            android:background="@color/schedule_day"
            android:text="@string/str_day2"/>

        <TextView
            android:id="@+id/schedule_tip3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/schedule_day_height"
            android:layout_marginHorizontal="1dp"
            android:padding="1dp"
            android:gravity="center"
            android:textSize="@dimen/schedule_day_size"
            android:background="@color/schedule_day"
            android:text="@string/str_day3"/>

        <TextView
            android:id="@+id/schedule_tip4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/schedule_day_height"
            android:layout_marginHorizontal="1dp"
            android:padding="1dp"
            android:gravity="center"
            android:textSize="@dimen/schedule_day_size"
            android:background="@color/schedule_day"
            android:text="@string/str_day4"/>

        <TextView
            android:id="@+id/schedule_tip5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/schedule_day_height"
            android:layout_marginHorizontal="1dp"
            android:padding="1dp"
            android:gravity="center"
            android:textSize="@dimen/schedule_day_size"
            android:background="@color/schedule_day"
            android:text="@string/str_day5"/>

        <TextView
            android:id="@+id/schedule_tip6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/schedule_day_height"
            android:layout_marginHorizontal="1dp"
            android:padding="1dp"
            android:gravity="center"
            android:textSize="@dimen/schedule_day_size"
            android:background="@color/schedule_day"
            android:text="@string/str_day6"/>

        <TextView
            android:id="@+id/schedule_tip7"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/schedule_day_height"
            android:layout_marginHorizontal="1dp"
            android:padding="1dp"
            android:gravity="center"
            android:textSize="@dimen/schedule_day_size"
            android:background="@color/schedule_day"
            android:text="@string/str_day7"/>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/schedule_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/schedule_sections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/schedule_background"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/section1"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_morning"
                        android:text="@string/str_section1"/>

                    <TextView
                        android:id="@+id/section2"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_morning"
                        android:text="@string/str_section2"/>

                    <TextView
                        android:id="@+id/section3"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_morning"
                        android:text="@string/str_section3"/>

                    <TextView
                        android:id="@+id/section4"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_morning"
                        android:text="@string/str_section4"/>

                    <TextView
                        android:id="@+id/section5"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_afternoon"
                        android:text="@string/str_section5"/>

                    <TextView
                        android:id="@+id/section6"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_afternoon"
                        android:text="@string/str_section6"/>

                    <TextView
                        android:id="@+id/section7"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_afternoon"
                        android:text="@string/str_section7"/>

                    <TextView
                        android:id="@+id/section8"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_afternoon"
                        android:text="@string/str_section8"/>

                    <TextView
                        android:id="@+id/section9"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_evening"
                        android:text="@string/str_section9"/>

                    <TextView
                        android:id="@+id/section10"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_evening"
                        android:text="@string/str_section10"/>

                    <TextView
                        android:id="@+id/section11"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_evening"
                        android:text="@string/str_section11"/>

                    <TextView
                        android:id="@+id/section12"
                        android:layout_width="@dimen/schedule_section_width"
                        android:layout_height="@dimen/schedule_section_height"
                        android:layout_marginVertical="1dp"
                        android:padding="1dp"
                        android:gravity="center"
                        android:textSize="@dimen/schedule_section_size"
                        android:background="@color/schedule_section_evening"
                        android:text="@string/str_section12"/>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/schedule_day1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="1dp">
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/schedule_day2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="1dp">
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/schedule_day3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="1dp">
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/schedule_day4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="1dp">
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/schedule_day5"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="1dp">
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/schedule_day6"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="1dp">
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/schedule_day7"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="1dp">
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>